--- a/app/src/main/res/layout/fragment_transactions_filter.xml
+++ b/app/src/main/res/layout/fragment_transactions_filter.xml
@@ -94,16 +94,14 @@
         app:layout_constraintStart_toStartOf="@+id/FilterTransName"
         app:layout_constraintTop_toBottomOf="@+id/FilterTransName" />
 
-    <EditText
+    <TextView
         android:id="@+id/FilterTransFrom"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
-        android:enabled="false"
+        android:textSize="20sp"
         android:hint="@string/dd_mm_yyyy"
-        android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/FilterTransFromSwitch"
         app:layout_constraintTop_toBottomOf="@+id/FilterTransFromSwitch" />
@@ -117,16 +115,14 @@
         app:layout_constraintStart_toStartOf="@+id/FilterTransFrom"
         app:layout_constraintTop_toBottomOf="@+id/FilterTransFrom" />
 
-    <EditText
+    <TextView
         android:id="@+id/FilterTransTo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
-        android:enabled="false"
         android:hint="@string/dd_mm_yyyy"
-        android:inputType="date"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/FilterTransFromSwitch"
         app:layout_constraintTop_toBottomOf="@+id/FilterTransToSwitch" />
