--- a/app/src/main/res/layout/dialoge_category_editing.xml
+++ b/app/src/main/res/layout/dialoge_category_editing.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textStyle="bold"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:text="@string/custom_category"
             android:gravity="center"
             android:background="#525252"
