--- a/app/src/main/res/layout/dialoge_category_editing.xml
+++ b/app/src/main/res/layout/dialoge_category_editing.xml
@@ -1,127 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     >
+
+    <TextView
+        android:id="@+id/text_categoryDialog_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:text="@string/custom_category"
+        android:gravity="center"
+        android:background="#525252"
+        />
+
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="vertical"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="20dp">
+        <TextView
+            android:id="@+id/text_categoryDialog_name"
+            android:layout_width="match_parent"
+            android:textSize="12sp"
+            android:textColor="@color/light_grey"
+            android:layout_height="wrap_content"
+            android:text="@string/category_name" />
+
+        <EditText
+            android:id="@+id/editText_category_Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="text"
+            android:hint="@string/category_name"
+            android:inputType="textCapSentences"
+            android:maxLength="20"
+            android:minHeight="48dp" />
 
         <TextView
-            android:id="@+id/text_categoryDialog_title"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:text="@string/custom_category"
-            android:gravity="center"
-            android:background="#525252"
-            />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/text_categories_wordCounter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="20dp">
-            <TextView
-                android:id="@+id/text_categoryDialog_name"
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:textColor="@color/light_grey"
-                android:layout_height="wrap_content"
-                android:text="@string/category_name" />
-
-            <EditText
-                android:id="@+id/editText_category_Name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="text"
-                android:hint="@string/category_name"
-                android:minHeight="48dp"
-                android:maxLength="16"
-                android:inputType="textCapSentences"
-                />
-
-            <TextView
-                android:id="@+id/text_categories_wordCounter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:textColor="@color/light_grey"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_newTransaction_title"
-                android:layout_marginStart="5dp" />
-            <TextView
-                android:layout_marginTop="30dp"
-                android:id="@+id/text_categoryDialog_icon"
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:textColor="@color/light_grey"
-                android:layout_height="wrap_content"
-                android:text="@string/category_icon" />
-
-            <EditText
-                android:id="@+id/editText_category_Icon"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:autofillHints="text"
-                android:hint="@string/category_icon"
-                android:inputType="textPersonName"
-                android:minHeight="48dp" />
-
-            <TextView
-                android:id="@+id/text_categories_verify_emoji"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="@string/invalid_icon_please_enter_an_emoji"
-                android:textColor="@color/light_red_warning"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_newTransaction_title"
-                android:layout_marginStart="5dp"
-                android:visibility="gone"/>
-        </LinearLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/light_grey"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_newTransaction_title"
+            android:layout_marginStart="5dp" />
+        <TextView
+            android:layout_marginTop="30dp"
+            android:id="@+id/text_categoryDialog_icon"
             android:layout_width="match_parent"
+            android:textSize="12sp"
+            android:textColor="@color/light_grey"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="20dp"            >
+            android:text="@string/category_icon" />
 
-            <Button
-                android:id="@+id/button_category_confirm"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:background="@drawable/background_buttons"
-                android:text="@string/confirm"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="TouchTargetSizeCheck" />
+        <EditText
+            android:id="@+id/editText_category_Icon"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:autofillHints="text"
+            android:hint="@string/category_icon"
+            android:inputType="textPersonName"
+            android:minHeight="48dp" />
 
-            <Button
-                android:id="@+id/button_category_delete"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:background="@drawable/background_buttons"
-                android:text="@string/delete"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="TouchTargetSizeCheck" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <TextView
+            android:id="@+id/text_categories_verify_emoji"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="@string/invalid_icon_please_enter_an_emoji"
+            android:textColor="@color/light_red_warning"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_newTransaction_title"
+            android:layout_marginStart="5dp"
+            android:visibility="gone"/>
 
     </LinearLayout>
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/button_category_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/background_buttons"
+            android:text="@string/delete"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <Button
+            android:id="@+id/button_category_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/background_buttons"
+            android:text="@string/confirm"
+            tools:ignore="TouchTargetSizeCheck" />
+    </LinearLayout>
+
+
+</LinearLayout>
