--- a/app/src/main/res/layout/fragment_transaction_future_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_future_new.xml
@@ -2,10 +2,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollViewFutureNew"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.transactions.NewTransaction.FutureTransactionsNew" >
+    tools:context=".fragments.transactions.NewTransaction.FutureTransactionsNew">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,27 +57,28 @@
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/text_fillTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/light_grey"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/payment_new_title"
-                android:layout_marginStart="5dp" />
+                app:layout_constraintTop_toBottomOf="@+id/payment_new_title" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/new_account_category_outline"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
-                app:layout_constraintTop_toTopOf="@+id/payment_new_title"
-                android:layout_marginLeft="10dp">
+                app:layout_constraintTop_toTopOf="@+id/payment_new_title">
 
                 <TextView
                     android:id="@+id/text_emoji_category"
@@ -115,12 +117,12 @@
             android:inputType="numberDecimal"
             android:maxLength="22"
             android:minHeight="48dp" />
+
         <TextView
             android:id="@+id/textView_fillAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
-            />
+            android:textColor="@color/light_grey" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
@@ -150,6 +152,7 @@
                 android:textSize="18sp" />
 
         </RadioGroup>
+
         <TextView
             android:id="@+id/actv_property"
             android:layout_width="match_parent"
@@ -162,12 +165,11 @@
             android:id="@+id/text_propertySelected"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:layout_marginTop="5dp"
             android:background="@color/rec_view_gray"
+            android:padding="10dp"
             android:text="@string/none"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white" />
 
 
         <TextView
@@ -182,18 +184,18 @@
             android:id="@+id/text_stakeholderSelected"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:gravity="left"
             android:layout_marginTop="5dp"
             android:background="@color/rec_view_gray"
+            android:gravity="left"
+            android:padding="10dp"
             android:text="@string/none"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white" />
+
         <TextView
             android:id="@+id/textView_fillStakeholder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_red_warning"/>
+            android:textColor="@color/light_red_warning" />
 
         <TextView
             android:id="@+id/payment_new_frequency_label"
@@ -202,13 +204,14 @@
             android:paddingTop="10dp"
             android:text="@string/frequency"
             android:textSize="18sp" />
+
         <Spinner
             android:id="@+id/payment_new_frequency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="20dp"
             android:layout_marginTop="5dp"
-            android:popupBackground="@color/rec_view_gray"/>
+            android:paddingVertical="20dp"
+            android:popupBackground="@color/rec_view_gray" />
 
 
         <TextView
@@ -224,10 +227,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:padding="10dp"
             android:backgroundTint="@color/rec_view_gray"
-            android:textColor="@color/white"
-            android:text="@string/choose" />
+            android:padding="10dp"
+            android:text="@string/choose"
+            android:textColor="@color/white" />
 
         <EditText
             android:id="@+id/payment_new_duration"
@@ -241,12 +244,20 @@
             app:layout_constraintEnd_toStartOf="@+id/payment_new_durationSpinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView_fillDuration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/payment_new_info"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="top|left"
+            android:maxLines="6"
+            android:scrollbars="vertical"
             android:textColor="@color/light_red_warning"
             android:textSize="18sp" />
 
@@ -258,22 +269,20 @@
             android:hint="@string/additional_comments"
             android:inputType="textMultiLine"
             android:minHeight="48dp" />
+
         <TextView
             android:id="@+id/text_newTransaction_wordCounter_notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
-            android:layout_marginLeft="4dp"
-            android:layout_marginStart="4dp" />
+            android:textColor="@color/light_grey" />
 
         <Button
             android:id="@+id/payment_new_confirm"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:background="@drawable/background_buttons"
             android:text="@string/confirm" />
-
 
 
     </LinearLayout>
