--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_grey"
-    android:visibility="visible"
     tools:context=".MainActivity">
 
 
@@ -21,86 +20,113 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_montly_summary">
 
         <TextView
-            android:id="@+id/textStakeholder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jeff"
-            android:textSize="20sp"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/labelStakeholder" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/sum_of_this_month_transactions"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInitialPayables" />
-
-        <TextView
-            android:id="@+id/labelStakeholder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/stakeholder"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textSumOfCash" />
-
-        <TextView
-            android:id="@+id/textTitleReceivables"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/receivables"
-            android:textColor="@color/transaction_Schedule_receivables"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textSumOfCash"
+            android:id="@+id/textSumOfPayablesReceivables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$10,000"
             android:textSize="24sp"
 
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textTitleSum" />
+
+        <TextView
+            android:id="@+id/textTitleSum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/balance"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textStakeholder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jeff"
+            android:textSize="14sp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/labelStakeholder" />
+
+        <TextView
+            android:id="@+id/textTitleSumTransactions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/sum_of_this_month_transactions"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
+
+        <TextView
+            android:id="@+id/labelStakeholder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/stakeholder"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/textTitleSumTransactions"
+            app:layout_constraintTop_toBottomOf="@+id/textTitleSumTransactions" />
+
+        <TextView
+            android:id="@+id/textTitleReceivables"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/receivables"
+            android:textColor="@color/transaction_Schedule_receivables"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textSumOfPayablesReceivables" />
+
+        <TextView
+            android:id="@+id/textSumOfCash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$10,000"
+            android:textSize="14sp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textTitleSumTransactions" />
 
         <TextView
             android:id="@+id/textInitialRecivables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$15,000.00"
-            android:textSize="24sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textTitleReceivables" />
+            app:layout_constraintTop_toTopOf="@+id/textTitleReceivables" />
 
         <TextView
             android:id="@+id/textTitlePayables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@string/payables"
             android:textColor="@color/transaction_Schedule_payables"
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInitialRecivables" />
+            app:layout_constraintTop_toBottomOf="@+id/textTitleReceivables" />
 
         <TextView
             android:id="@+id/textInitialPayables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$2,000.00"
-            android:textSize="24sp"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textTitlePayables" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="390dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textTitlePayables" />
+            app:layout_constraintTop_toBottomOf="@+id/textInitialPayables" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.Toolbar
